made slack commands work

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@hono/zod-validator": "^0.1.11",
         "@libsql/client": "^0.3.6",
+        "@paralleldrive/cuid2": "^2.2.2",
         "@tsndr/cloudflare-worker-jwt": "^2.2.10",
         "drizzle-kit": "^0.20.2",
         "drizzle-orm": "^0.29.0",
